--- a/auth.html
+++ b/auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite Possibilities - Sign In</title>
+    <title>Dream Chaser - Sign In</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -229,9 +229,9 @@
         <div class="auth-left">
             <div class="logo">
                 <i class="fas fa-rocket"></i>
-                <h1>Infinite Possibilities</h1>
+                <h1>Dream Chaser</h1>
             </div>
-            <p class="tagline">The GoGetter's Assist!</p>
+            <p class="tagline">Where Dream Careers are Manifested</p>
             <p>Your private career management platform</p>
             
             <div class="feature-list">
