--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Infinite Possibilities</title>
+    <title>Dashboard - Dream Chaser</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -382,7 +382,7 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <i class="fas fa-rocket"></i>
-                    <h1>Infinite Possibilities</h1>
+                    <h1>Dream Chaser</h1>
                 </div>
                 <div class="user-info">
                     Welcome, <span id="userName">User</span>
@@ -529,7 +529,7 @@
                                 <i class="fas fa-user-plus"></i>
                             </div>
                             <div class="activity-content">
-                                <div class="activity-title">Welcome to Infinite Possibilities!</div>
+                                <div class="activity-title">Welcome to Dream Chaser!</div>
                                 <div class="activity-time">Account created successfully</div>
                             </div>
                         </div>
